# SAME54

./: .gitignore  .gitmodules  AtmelStartFramework.cmake  CMakeLists.txt  CMakePresets.json  atmel_start_config.atstart  atmel_start_pins.h  atsame53.cfg  driver_init.c  gcc-arm-none-eabi.cmake  main.c
App/: CMakeLists.txt  app_startup.c  app_startup.h
Device/: CMakeLists.txt
Device/CMSIS/: CMakeLists.txt
Middleware/: CMakeLists.txt
Middleware/config/: CMakeLists.txt  FreeRTOSConfig.h
config/: CMakeLists.txt  hpl_gclk_config.h  hpl_oscctrl_config.h
